--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
     "dotenv": "^16.0.3",
-    "gh-pages": "^5.0.0",
     "moment": "^2.29.4",
     "qs": "^6.11.0",
     "react": "^18.2.0",
@@ -53,6 +52,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "devDependencies": {
+    "gh-pages": "5.0.0"
+  }	
   }
 }
