--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ryutribal.github.io/RyuTribal.github.io",
+  "homepage": "http://ryutribal.github.io/gear4guitar", 
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",	
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -56,7 +56,10 @@
       "last 1 safari version"
     ],
     "devDependencies": {
-    "gh-pages": "5.0.0"
-  }	
+      "gh-pages": "5.0.0"
+    }
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
