--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ryutribal.github.io/gear4guitar", 
+  "homepage": "http://ryutribal.github.io/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
+    "browserlist": "^1.0.1",
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "qs": "^6.11.0",
@@ -44,6 +45,9 @@
       "react-app/jest"
     ]
   },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,12 +58,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "devDependencies": {
-      "gh-pages": "5.0.0"
-    }
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
+    ]
   }
 }
