--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev-mobile": "concurrently \"npm run server\" \"npm run client-mobile\""
   },
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "env-cmd": "^10.1.0"
   }
 }
